--- a/app/sass/content/timer.scss
+++ b/app/sass/content/timer.scss
@@ -2,22 +2,26 @@
 /*______ Timer ______*/
 
 .timer-app {
-	padding-top: 65px;
-	@media (min-width: $mob-xs) {
-		padding-top: 35px;
-	}
-	@media (min-width: 800px) {
-		padding-top: 65px;
-	};
+
 	&.start {
 		.sort-list,
-		.toggle__btn {
+		.toggle__btn,
+		.btns-list {
 			opacity: .7;
 			cursor: no-drop;
 		}
 		.sort-list {
 			li {
 				cursor: no-drop
+			}
+		}
+		.btns-list {
+			li {
+				&:hover {
+					a {
+						cursor: no-drop;
+					}
+				}
 			}
 		}
 	}
@@ -151,6 +155,87 @@
 		}
 	}
 }
+
+.btns-list {
+		@include list-reset;
+		display: flex;
+		justify-content: center;
+		flex-wrap: wrap;
+		margin-bottom: 65px;
+		@media (min-width: $mob-xs) {
+			margin-bottom: 35px;
+		}
+		@media (min-width: 800px) {
+			margin-bottom: 65px;
+		};
+		li {
+			display: block;
+			@media (min-width: $mob-xs) {
+				margin: 0 2.5px;
+				width: auto;
+				a {
+
+				}
+			}
+			@media (min-width: $tablet-w) {
+				margin: 0 15px;
+			};
+			a {
+				position: relative;
+				padding: 0 1.25em;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				height: 60px;
+				border-radius: 72px;
+				background-color: transparent;
+				text-transform: uppercase;
+				border: 2px solid $salat;
+				color: $tColor;
+				letter-spacing: .8px;
+				font-weight: bold;
+				transition: background-color .3s, color .3s ease;
+				@media (min-width: $mob-xs) {
+					font-size: 12px;
+					padding: 0.45em;
+					height: 40px;
+				}
+				@media (min-width: $mob-s) {
+					font-size: 12px;
+					height: 50px;
+				};
+				@media (min-width: $tablet-w) {
+					padding: 0 2.25em;
+					font-size: 16px;
+					height: 60px;
+				};
+				@media (min-width: $desk-w) {
+					padding: 0 3.25em;
+				};
+				&:after {
+					content: '';
+					position: absolute;
+					left: 50%;
+					bottom: -9px;
+					width: 15px;
+					height: 7.5px;
+					transform: translateX(-50%);
+					background: url('../img/icon-svg/triangle-down.svg') center 0 no-repeat;
+					opacity: 0;
+					transition: opacity .3s ease;
+				}
+			}
+			&.active {
+				a {
+					color: $white;
+					background-color: $salat;
+					&:after {
+						opacity: 1;
+					}
+				}
+			}
+		}
+	}
 
 .sort-list {
 	@include list-reset;
