--- a/app/sass/content/content.scss
+++ b/app/sass/content/content.scss
@@ -83,15 +83,15 @@ main.main-container {
 
 .timer-section {
 	@media (min-width: $mob-xs) {
-		margin-bottom: 60px;
+		padding-bottom: 60px;
 		padding-top: 35px;
 	};
 	@media (min-width: $tablet-w) {
-		margin-bottom: 90px;
+		padding-bottom: 90px;
 		padding-top: 50px;
 	};
 	@media (min-width: $desk-w) {
-		margin-bottom: 130px;
+		padding-bottom: 130px;
 		padding-top: 70px;
 	};
 }
