--- a/app/sass/header/header-desk.scss
+++ b/app/sass/header/header-desk.scss
@@ -178,6 +178,7 @@ nav.nav {
 			width: 100%;
 			height: 100%;
 			transition: color .3s ease;
+			display: none;
 		}
 		span {
 			position: relative;
