--- a/app/sass/header/header-desk.scss
+++ b/app/sass/header/header-desk.scss
@@ -247,6 +247,7 @@ nav.nav {
 .logo1 {
 	display: block;
 	border-radius: 50%;
+	background: #ffffff;
 	@media (min-width: $mob-xs) {
 		width: 100px;
 		height: 100px;
