--- a/app/sass/sliders/sliders.scss
+++ b/app/sass/sliders/sliders.scss
@@ -32,6 +32,7 @@
 			
 			position: absolute;
 			top: 50%;
+			left: 30px;
 			transform: translateY(-50%);
 			width: 100%;
 			z-index: 650;
@@ -40,10 +41,11 @@
 			};
 			@media (min-width: $desk-w) {
 				display: block;
-				max-width: 1140px;
+				//max-width: 1140px;
+				max-width: calc(100% - 30px);
 			};
 			@media (min-width: 1360px) {
-				max-width: 1300px;
+				//max-width: 1300px;
 			};
 		}
 		.slide {
@@ -116,7 +118,7 @@
 	}
 
 	.slide-next {
-		right: 0;
+		right: 30px;
 		@media (min-width: 1460px) {
 			right: -5%;
 		};
