--- a/app/templates/company.twig
+++ b/app/templates/company.twig
@@ -107,8 +107,11 @@
 			</div>
 			<div class="about-egg__text">
 				<p>
-					Миссия нашей компании — бережно сохранять и нести людям ценность яйца, которое остаётся неизменным в потреблении
-					 человеком на протяжении тысячелетий.
+					Яйцо — один из немногих продуктов, остающийся неизменным в потреблении человеком на протяжении тысячелетий.
+				</p>
+				<p>
+					Миссия нашей компании <br> 
+					— бережно сохранять и нести людям ценность этого натурального продукта
 				</p>
 			</div>
 		</div>
@@ -148,8 +151,7 @@
 					</div>
 					<div class="item__text">
 						<div class="title-h3">Безопасность</div>
-						Система менеджмента безопасности пищевой продукции (СМБПП), основанная 
-						на требованиях стандарта ISO 22000:2018 
+						ГОСТ 31654-2012, система менеджмента безопасности пищевой продукции, основанная на требованиях стандарта ISO 22000:2018
 					</div>
 				</li>
 
@@ -166,7 +168,7 @@
 					</div>
 					<div class="item__text">
 						<div class="title-h3">Свежесть</div>
-						Прямые контракты с ключевыми розничными сетями позволяют работать без склада
+						Прямые контракты с ключевыми розничными сетями позволяют доставлять продукцию покупателям максимально быстро
 					</div>
 				</li>
 			</ul>
@@ -247,7 +249,7 @@
 
 	<section class="slider-section wave-bg" uk-scrollspy="cls: wave-anim">
 		<div class="uk-container uk-container--small">
-			<h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Самое ценное для нас – люди, которые работают для Вас</h2>
+			<h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Главная наша сила –люди, которые работают для Вас</h2>
 			<!-- begin composition-slider -->
 			<div class="custom-slider" uk-scrollspy="cls: slide-up; delay: 300">
 				<div class="uk-container">
