--- a/app/templates/includes/components/advantages-section.twig
+++ b/app/templates/includes/components/advantages-section.twig
@@ -173,7 +173,7 @@
 								<img data-src="img/media/advantage-img/advantage-img-18.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">Только самые крупные яйца используются в производстве марки (СО и С1)</div>
+								<div class="title-h3">Только самые крупные яйца используются в производстве марки (СВ и СО)</div>
 							</div>
 						</div>
 					</li>  
@@ -232,7 +232,7 @@
 								<img data-src="img/media/advantage-img/advantage-img-21.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">Эффективно взбивается и держит форму</div>
+								<div class="title-h3">Белки лучше взбиваются в густую пену и держат форму</div>
 							</div>
 						</div>
 					</li>
@@ -245,7 +245,7 @@
 								<img data-src="img/media/advantage-img/advantage-img-22.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">ТКуры несушки High-line Brown</div>
+								<div class="title-h3">Куры несушки Hisex Brown</div>
 							</div>
 						</div>
 					</li>  
@@ -289,19 +289,6 @@
 								<svg width="100%" height="100%" class="">
 								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 								</svg>
-								<img data-src="img/media/advantage-img/advantage-img-24.svg" alt="" uk-img>
-							</div>
-							<div class="advantage-item__text">
-								<div class="title-h3">Необходимый продукт в рационе каждого члена семьи и незаменимый в кулинарии</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="advantage-item">
-							<div class="advantage-item__img">
-								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
-								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-25.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
@@ -315,10 +302,23 @@
 								<svg width="100%" height="100%" class="">
 								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 								</svg>
+								<img data-src="img/media/advantage-img/advantage-img-24.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Основной продукт в рационе семьи и незаменимый в кулинарии</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-26.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">Производство в соответствии с ГОСТ 31654-2012</div>
+								<div class="title-h3">Производство в соответствии <br> с ГОСТ 31654-2012</div>
 							</div>
 						</div>
 					</li>
@@ -331,7 +331,7 @@
 								<img data-src="img/media/advantage-img/advantage-img-27.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">Широкий ассортимент категорий</div>
+								<div class="title-h3">Широкий ассортимент категорий (СО, С1, С2, С3)</div>
 							</div>
 						</div>
 					</li>  
