--- a/app/templates/includes/components/steps-work-section.twig
+++ b/app/templates/includes/components/steps-work-section.twig
@@ -15,7 +15,6 @@
 							<div class="round-item__text">
 								<div class="title-h3">Производство <br> кормов</div>
 							</div>
-							<a href="" class="btn"><span>Предложить сырье</span></a>
 						</div>
 					</li>
 					<li>
@@ -53,9 +52,8 @@
 								<img data-src="img/media/advantage-img/advantage-img-13.svg" alt="" uk-img>
 							</div>
 							<div class="round-item__text">
-								<div class="title-h3">Сортировка и упаковка <br> готовой продукции</div>
+								<div class="title-h3">Сортировка и упаковка <br> продукции</div>
 							</div>
-							<a href="" class="btn"><span>Предложить сырье</span></a>
 						</div>
 					</li>
 					<li>
@@ -67,9 +65,8 @@
 								<img data-src="img/media/advantage-img/advantage-img-14.svg" alt="" uk-img>
 							</div>
 							<div class="round-item__text">
-								<div class="title-h3">Отгрузка готовой продукции <br> с нашего склада и доставка до магазинов</div>
+								<div class="title-h3">Доставка продукции до магазинов</div>
 							</div>
-							<a href="" class="btn"><span>Предложить сырье</span></a>
 						</div>
 					</li>
 				</ul>
