--- a/app/templates/includes/components/time-section.twig
+++ b/app/templates/includes/components/time-section.twig
@@ -1,7 +1,7 @@
 
 <section class="time-section">
 	<div class="uk-container uk-container--small">
-		<h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Сколько времени варить яйца?</h2>
+		<!-- <h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Сколько времени варить яйца?</h2> -->
 		<a href="/timer.html" class="btn btn--icon uk-margin-auto icon-clock" uk-scrollspy="cls:slide-up; delay: 100"><span>попробуйте наш таймер</span></a>
 		{% include './eggs-slider.twig' %}
 		<a href="" class="btn btn--yellow uk-margin-auto" uk-scrollspy="cls:slide-up"><span>Посмотреть все рецепты</span></a>
