--- a/app/sass/content/about-egg.scss
+++ b/app/sass/content/about-egg.scss
@@ -45,6 +45,9 @@
 			p {
 				font-size: 24px;
 				line-height: 26px;
+				&:first-child {
+					margin-bottom: 40px;
+				}
 			}
 		}
 		&.show {
