--- a/app/templates/includes/components/advantages-h-section.twig
+++ b/app/templates/includes/components/advantages-h-section.twig
@@ -179,7 +179,7 @@
 					</div>
 				</div>
 				<div class="item__text">
-					Яркая красочная упаковка
+					Яркий дизайн с детской тематикой
 				</div>
 			</li>
 
@@ -208,7 +208,7 @@
 {% if theme == "brown" %}
 <div class="advantages-h-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
 	<div class="uk-container">
-		<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Большим яйцам — специальная упаковка</h2>
+		<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Любимый продукт в самом популярном формате</h2>
 		<ul class="advantages-h-list advantages-h-list--three-items">
 			<li class="item">
 				<div class="item__img">
