--- a/app/templates/includes/components/eggs-slider.twig
+++ b/app/templates/includes/components/eggs-slider.twig
@@ -4,6 +4,9 @@
 <div class="custom-slider">
 	<div class="slider">
 		<div class="slide">
+			<img data-lazy="img/media/sliders/info.png" alt="">
+		</div>
+		<div class="slide">
 			<div class="uk-grid uk-child-width-1-3@m uk-child-width-1-2" uk-grid>
 			
 				
