--- a/app/templates/includes/components/typebox-section.twig
+++ b/app/templates/includes/components/typebox-section.twig
@@ -147,8 +147,8 @@
 						</div>
 					</div>
 					<div class="item__text">
-						<div class="title-h3">Junior 15 C2 <br> — для самых активных</div>
-						<div class="item__subtitle">10 яиц СВ (75+ грамм)</div>
+						<div class="title-h3">Junior Blue</div>
+						<div class="item__subtitle">15 C2 (45-54,9 грамм)</div>
 					</div>
 				</li>
 
@@ -164,8 +164,8 @@
 						</div>
 					</div>
 					<div class="item__text">
-						<div class="title-h3">Junior 15 C2 <br> — для самых активных</div>
-						<div class="item__subtitle">15 яиц С2 (45-54,9 грамм)</div>
+						<div class="title-h3">Junior Pink</div>
+						<div class="item__subtitle">15 C2 (45-54,9 грамм)</div>
 					</div>
 				</li>
 
@@ -181,8 +181,8 @@
 						</div>
 					</div>
 					<div class="item__text">
-						<div class="title-h3">Junior 15 C2 <br> — для самых активных</div>
-						<div class="item__subtitle">15 яиц СО (65-74,9 грамм)</div>
+						<div class="title-h3">Junior Green</div>
+						<div class="item__subtitle">15 C2 (45-54,9 грамм)</div>
 					</div>
 				</li>
 			</ul>
@@ -197,23 +197,23 @@
 			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Виды упаковки</h2>
 
 			<ul class="typebox-list typebox-list--four-elements" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
-
 				<li class="item">
 					<div class="item__img">
 						<div class="bg-img">
 							<svg width="100%" height="100%" class="typebox-bg-img">
-							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-3"></use>
 							</svg>
 						</div>
 						<div class="content-img">
-							<img data-src="img/media/box-type-8.png" alt="" uk-img>
+							<img data-src="img/media/box-type-10.png" alt="" uk-img>
 						</div>
 					</div>
 					<div class="item__text">
-						<div class="title-h3">Вторая категория</div>
-						<div class="item__subtitle">10 яиц (45-54,9 грамм)</div>
+						<div class="title-h3">Отборная категория</div>
+						<div class="item__subtitle">10 яиц (65-74,9 грамм)</div>
 					</div>
 				</li>
+
 
 				<li class="item">
 					<div class="item__img">
@@ -236,16 +236,16 @@
 					<div class="item__img">
 						<div class="bg-img">
 							<svg width="100%" height="100%" class="typebox-bg-img">
-							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-3"></use>
+							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 							</svg>
 						</div>
 						<div class="content-img">
-							<img data-src="img/media/box-type-10.png" alt="" uk-img>
+							<img data-src="img/media/box-type-8.png" alt="" uk-img>
 						</div>
 					</div>
 					<div class="item__text">
-						<div class="title-h3">Отборная категория</div>
-						<div class="item__subtitle">10 яиц (65-74,9 грамм)</div>
+						<div class="title-h3">Вторая категория</div>
+						<div class="item__subtitle">10 яиц (45-54,9 грамм)</div>
 					</div>
 				</li>
 
