--- a/app/templates/contacts.twig
+++ b/app/templates/contacts.twig
@@ -46,6 +46,9 @@
 										<input type="text" class="js__input-phone" placeholder="Номер телефона">
 									</fieldset>
 									<fieldset>
+										<input type="text" placeholder="Email">
+									</fieldset>
+									<fieldset>
 										<textarea name="" id="" placeholder="Сообщение"></textarea>
 									</fieldset>
 									<fieldset>
