--- a/app/sass/content/typebox-section.scss
+++ b/app/sass/content/typebox-section.scss
@@ -66,10 +66,10 @@
 				align-items: center;
 				transform: translate(-50%, -50%);
 				img {
-					max-width: 100%;
-					max-height: 100%;
-					height: 100%;
-					object-fit: cover;
+/* 					max-width: 100%;
+max-height: 100%;
+height: 100%;
+object-fit: cover; */
 				}
 			}
 		}
