--- a/app/templates/includes/header/main-nav.twig
+++ b/app/templates/includes/header/main-nav.twig
@@ -5,17 +5,13 @@
 		<ul class="main-nav">
 			<li>
 				<a href="/">
-					<svg width="82px" height="59px" class="nav-ellipse">
-					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-1"></use>
-					</svg>
+					<img width="82px" height="59px" data-src="img/icon-svg/nav-ellipse-1.svg" alt="" uk-img>
 					<span>Лето</span>
 				</a>
 			</li>
 			<li>
 				<a href="ugodie.html">
-					<svg width="233px" height="71px" class="nav-ellipse">
-					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-2"></use>
-					</svg>
+					<img width="233px" height="71px" data-src="img/icon-svg/nav-ellipse-2.svg" alt="" uk-img>
 					<span>Деревенское угодье</span>
 				</a>
 			</li>
@@ -26,17 +22,13 @@
 			</li>
 			<li>
 				<a href="junior.html">
-					<svg class="nav-ellipse">
-					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-3"></use>
-					</svg>
+					<img width="92px" height="55px" data-src="img/icon-svg/nav-ellipse-3.svg" alt="" uk-img>
 					<span>Junior</span>
 				</a>
 			</li>
 			<li>
 				<a href="nov.html">
-					<svg class="nav-ellipse">
-					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-4"></use>
-					</svg>
+					<img width="161px" height="56px" data-src="img/icon-svg/nav-ellipse-4.svg" alt="" uk-img>
 					<span>Сельская новь</span>
 				</a>
 			</li>
