--- a/app/templates/includes/components/advantages-section.twig
+++ b/app/templates/includes/components/advantages-section.twig
@@ -1,6 +1,6 @@
 
 	{% if theme == 'green' %}
-	<section class="advantages-section ">
+	<section class="advantages-section">
 		<div class="uk-container">
 			<div class="advantages-section__inner">
 				<ul class="advantages-list advantages-list--six-items">
@@ -93,7 +93,7 @@
 								<img data-src="img/media/advantage-img/advantage-img-6.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">Размер — CО и С1</div>
+								<div class="title-h3">Оптимальный размер</div>
 								<div class="text">
 									Используются столовые яйца отборной и первой категории (СО и С1)
 								</div>
