--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1079,6 +1079,84 @@ p {
 
 /*______ END ANIMATION ______*/
 
+.preloader {
+  position: fixed;
+  display: block;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  z-index: 9999;
+  -webkit-transition: background-color 1s linear;
+  -o-transition: background-color 1s linear;
+  -moz-transition: background-color 1s linear;
+  transition: background-color 1s linear;
+}
+
+.preloader__indicator {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate3d(-50%, -50%, 0);
+  -moz-transform: translate3d(-50%, -50%, 0);
+  transform: translate3d(-50%, -50%, 0);
+  -webkit-transition: all .3s linear;
+  -o-transition: all .3s linear;
+  -moz-transition: all .3s linear;
+  transition: all .3s linear;
+}
+
+.preloader__indicator img {
+  margin-bottom: 30px;
+}
+
+.preloader__indicator-value {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  height: 40px;
+  width: 100%;
+  text-align: left;
+  font-size: 30px;
+  line-height: 30px;
+  font-weight: bold;
+  font-family: "Museo";
+}
+
+.preloader.loaded .preloader__indicator {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.preloader.hidden {
+  background-color: transparent;
+  z-index: -1;
+}
+
+.preloader.page-leave {
+  -webkit-transform: translate(0, 0);
+  -moz-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  transform: translate(0, 0);
+}
+
+.preloader.another-page {
+  -webkit-transform: scale(0);
+  -moz-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+}
+
 html,
 body,
 table {
@@ -1235,38 +1313,6 @@ svg {
   transition: fill .3s linear;
 }
 
-.preloader {
-  position: fixed;
-  display: block;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  width: 400%;
-  height: 400%;
-  background: #ffb422;
-  z-index: 9999;
-  border-radius: 0 50% 0 50%;
-  -webkit-transition: all 1.25s ease-out;
-  -o-transition: all 1.25s ease-out;
-  -moz-transition: all 1.25s ease-out;
-  transition: all 1.25s ease-out;
-}
-
-.preloader.page-leave {
-  -webkit-transform: translate(0, 0);
-  -moz-transform: translate(0, 0);
-  -ms-transform: translate(0, 0);
-  transform: translate(0, 0);
-}
-
-.preloader.another-page {
-  -webkit-transform: scale(0);
-  -moz-transform: scale(0);
-  -ms-transform: scale(0);
-  transform: scale(0);
-}
-
 .uk-container {
   margin: 0 auto;
   max-width: 1360px;
@@ -1373,23 +1419,6 @@ svg {
     background-position: 50% 50%;
   }
 }
-
-/* body {
-	& >* {
-		display: none;
-	}
-
-	header.header,
-	footer.footer,
-	.main-banner,
-	.advantages-h-section,
-	.typebox-section,
-	.brands-slider,
-	.time-section {
-		display: block !important;
-	}
-}
- */
 
 /*______ HEADER ______*/
 
@@ -2193,7 +2222,7 @@ nav.nav {
   -moz-transition: opacity .3s, transform 1.2s, top 1.2s, bottom 1.2s, left 1.2s, right 1.2s ease-out, -moz-transform 1.2s;
   transition: opacity .3s, transform 1.2s, top 1.2s, bottom 1.2s, left 1.2s, right 1.2s ease-out;
   transition: opacity .3s, transform 1.2s, top 1.2s, bottom 1.2s, left 1.2s, right 1.2s ease-out, -webkit-transform 1.2s, -moz-transform 1.2s;
-  will-change: transform, top, bottom, left, right;
+  will-change: opacity, transform, top, bottom, left, right;
   width: 100%;
   margin: 0 auto;
   max-width: 230px;
@@ -2593,10 +2622,8 @@ nav.nav {
 }
 
 .typebox-list .item__img .content-img img {
-  /* 					max-width: 100%;
-max-height: 100%;
-height: 100%;
-object-fit: cover; */
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .typebox-list .item__text {
@@ -4371,10 +4398,7 @@ main.main-container {
   }
 
   .toggle__btn {
-    -webkit-transform: rotate(-90deg);
-    -moz-transform: rotate(-90deg);
-    -ms-transform: rotate(-90deg);
-    transform: rotate(-90deg);
+    margin: 10px 0;
   }
 
   .btns-list {
@@ -4666,10 +4690,7 @@ main.main-container {
   }
 
   .toggle__btn {
-    -webkit-transform: rotate(0);
-    -moz-transform: rotate(0);
-    -ms-transform: rotate(0);
-    transform: rotate(0);
+    margin: 0;
   }
 
   .btns-list {
