--- a/app/sass/content/advantages-list.scss
+++ b/app/sass/content/advantages-list.scss
@@ -94,7 +94,7 @@
 	li {
 		position: relative;
 		transition: opacity .3s, transform 1.2s, top 1.2s, bottom 1.2s, left 1.2s, right 1.2s ease-out;
-		will-change: transform, top, bottom, left, right;
+		will-change: opacity, transform, top, bottom, left, right;
 		width: 100%;
 		margin: 0 auto;
 		max-width: 230px;
